--- a/example/src/input.css
+++ b/example/src/input.css
@@ -21,6 +21,11 @@
         @apply absolute top-0 left-0 w-full pointer-events-none;
     }
 
+    /* .parallax_mid {
+        @apply relative flex justify-center items-center;
+        height: 80vh;
+    } */
+
     /* For .sec section */
     .sec {
         @apply relative bg-white p-20;
