--- a/example/src/output.css
+++ b/example/src/output.css
@@ -1482,6 +1482,10 @@ body::-webkit-scrollbar {
   width: 13rem;
 }
 
+.w-5 {
+  width: 1.25rem;
+}
+
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -2337,6 +2341,10 @@ body::-webkit-scrollbar {
 
   .sm\:w-10 {
     width: 2.5rem;
+  }
+
+  .sm\:w-full {
+    width: 100%;
   }
 
   .sm\:justify-start {
