--- a/example/src/output.css
+++ b/example/src/output.css
@@ -1486,6 +1486,18 @@ body::-webkit-scrollbar {
   width: 1.25rem;
 }
 
+.w-6 {
+  width: 1.5rem;
+}
+
+.w-96 {
+  width: 24rem;
+}
+
+.w-80 {
+  width: 20rem;
+}
+
 .max-w-2xl {
   max-width: 42rem;
 }
