--- a/example/src/output.css
+++ b/example/src/output.css
@@ -1458,44 +1458,20 @@ body::-webkit-scrollbar {
   width: 1rem;
 }
 
-.w-64 {
-  width: 16rem;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-2 {
-  width: 0.5rem;
-}
-
 .w-60 {
   width: 15rem;
 }
 
-.w-56 {
-  width: 14rem;
-}
-
-.w-52 {
-  width: 13rem;
-}
-
-.w-5 {
-  width: 1.25rem;
-}
-
-.w-6 {
-  width: 1.5rem;
-}
-
-.w-96 {
-  width: 24rem;
+.w-64 {
+  width: 16rem;
 }
 
 .w-80 {
   width: 20rem;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .max-w-2xl {
@@ -1674,6 +1650,10 @@ body::-webkit-scrollbar {
   overflow-x: hidden;
 }
 
+.overflow-y-hidden {
+  overflow-y: hidden;
+}
+
 .whitespace-nowrap {
   white-space: nowrap;
 }
@@ -1803,6 +1783,11 @@ body::-webkit-scrollbar {
 
 .bg-white\/50 {
   background-color: rgb(255 255 255 / 0.5);
+}
+
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-r {
@@ -2347,6 +2332,10 @@ body::-webkit-scrollbar {
     margin-top: 0.5rem;
   }
 
+  .sm\:mt-0 {
+    margin-top: 0px;
+  }
+
   .sm\:h-10 {
     height: 2.5rem;
   }
@@ -2388,8 +2377,12 @@ body::-webkit-scrollbar {
     inset: 0px;
   }
 
-  .md\:max-w-md {
-    max-width: 28rem;
+  .md\:h-10 {
+    height: 2.5rem;
+  }
+
+  .md\:w-10 {
+    width: 2.5rem;
   }
 
   .md\:p-4 {
