--- a/example/src/input.css
+++ b/example/src/input.css
@@ -12,6 +12,12 @@
     /* For .parallax section */
     .parallax {
         @apply relative flex justify-center items-center;
+        height: 70vh;
+        /* Adjust as needed */
+    }
+
+    .parallax_first {
+        @apply relative flex justify-center items-center;
         height: 90vh;
         /* Adjust as needed */
     }
