--- a/example/src/output.css
+++ b/example/src/output.css
@@ -1048,7 +1048,7 @@ input:checked + .toggle-bg {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 90vh;
+  height: 70vh;
   /* Adjust as needed */
 }
 
@@ -2068,6 +2068,25 @@ body::-webkit-scrollbar {
 
 /* Add Tailwind utility classes alongside your existing HTML structure */
 
+@media (min-width: 640px) {
+  .sm\:parallax {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 70vh;
+    /* Adjust as needed */
+  }
+
+  .sm\:parallax img {
+    pointer-events: none;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+  }
+}
+
 @media (min-width: 768px) {
   .md\:parallax_mid {
     position: relative;
@@ -2088,21 +2107,13 @@ body::-webkit-scrollbar {
 }
 
 @media (min-width: 1024px) {
-  .lg\:parallax {
+  .lg\:parallax_first {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 90vh;
     /* Adjust as needed */
-  }
-
-  .lg\:parallax img {
-    pointer-events: none;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 100%;
   }
 }
 
@@ -2112,7 +2123,7 @@ body::-webkit-scrollbar {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 110vh;
+    height: 61vh;
     /* Adjust as needed */
   }
 }
