--- a/example/src/output.css
+++ b/example/src/output.css
@@ -1048,7 +1048,7 @@ input:checked + .toggle-bg {
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 70vh;
+  height: 90vh;
   /* Adjust as needed */
 }
 
@@ -2074,7 +2074,7 @@ body::-webkit-scrollbar {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 70vh;
+    height: 90vh;
     /* Adjust as needed */
   }
 
@@ -2107,13 +2107,21 @@ body::-webkit-scrollbar {
 }
 
 @media (min-width: 1024px) {
-  .lg\:parallax_first {
+  .lg\:parallax {
     position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
     height: 90vh;
     /* Adjust as needed */
+  }
+
+  .lg\:parallax img {
+    pointer-events: none;
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    width: 100%;
   }
 }
 
@@ -2123,7 +2131,7 @@ body::-webkit-scrollbar {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 61vh;
+    height: 110vh;
     /* Adjust as needed */
   }
 }
